--- a/src/main/resources/assets/minepreggo/lang/ko_kr.json
+++ b/src/main/resources/assets/minepreggo/lang/ko_kr.json
@@ -666,6 +666,7 @@
   "chat.minepreggo.player.pregnancy.message.cannot_ride.ender_woman.generic.1": "배가 너무 커서 %s의 머리를 치고 있습니다.",
   "chat.minepreggo.player.pregnancy.message.cannot_ride.ender_woman.generic.2": "몸무게가 너무 무거워서 %s를 탈 수 없습니다",
   "chat.minepreggo.player.pregnancy.message.womb_is_overloaded.creative": "자궁이 과부하 상태입니다. 지금 생존 모드로 전환하면 죽을 것입니다!",
+  "chat.minepreggo.player.pregnancy.message.cannot_fly_using_elytras": "지금은 날개로 날기엔 배에 너무 무거운 짐이 느껴진다",
 
   "chat.minepreggo.player.message.cannot_ride.ender_woman.pregnant.labor": "%s가 진통 중이라 지금은 탈 수 없습니다!",
   "chat.minepreggo.player.message.cannot_ride.ender_woman.pregnant.morning_sickness": "%s가 너무 아파서 지금은 탈 수 없습니다!",
